--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,5 +5,6 @@
         <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">true</item>
         <item name="android:statusBarColor" tools:targetApi="l">#FFF</item>
         <item name="android:navigationBarColor">#FFF</item>
+        <item name="colorAccent">#000</item>
     </style>
 </resources>
